versioned_docs/version-1.0/self-hosted/administration/github.mdx
---
title: GitHub Integration
description: Use our GitHub Integrate so your users can access private repositories in their development environments
sidebar_label: GitHub Integration
id: github
---

import Image from '@theme/Image';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import TiersList from '@theme/TiersList';

You can configure Okteto to use a GitHub to authenticate your users as well as give them access to private GitHub repositories. 

There are several reasons for considering this approach including:
- Your users can select a repo from a list, instead of having to type the full repository URL.
- Give everyone on your cluster read-only access to private repositories.
- Control access to Okteto and the repositories at the Organization level, or per repository.
- The pipelines use an app-scoped token, instead of a shared user.


## Configuration Steps 

Setting up the GitHub integration requires several steps in both GitHub and your Okteto instance. Complete the following steps in GitHub:

1. [Create the GitHub Application](#creating-the-github-app)
1. [Generate a private key for the GitHub App](#generating-a-private-key-for-the-github-app)


Complete the following steps in your Okteto Self-Hosted instance:

1. [Add the GitHub App information to your Helm configuration file](#adding-the-github-app-information-to-your-helm-configuration-file)
1. [Reconfigure your Okteto instance](#reconfiguring-your-okteto-enterprise-instance)
1. [Add or Remove private repositories](#adding-or-removing-private-repositories)
1. [Verify your installation](#verifying-your-installation)

Once this configuration has been completed, your instance of Okteto will use the GitHub Application you authenticate during the clone repository step of any Okteto pipelines.


### Creating the GitHub App

1. In the upper-right corner of any page in GitHub, select your `profile icon > Organizations`.
1. Click on the `settings` of the organization you want to use to create the application.
1. In the left navigation, select `Developer settings > GitHub Apps`.
1. Select `New GitHub App`.
1. Complete the following fields as follows:
    - `GitHub App Name:` enter an appropriate name for your application (e.g. `okteto-$YOUR_GITHUB_ORGANIZATION`)
    - `Homepage URL:` https://okteto.$SUBDOMAIN
    - `Callback URL:` https://okteto.$SUBDOMAIN
1. Uncheck the `Expire user authorization tokens` option.
1. Check the `Request user authorization (OAuth) during installation` option.
1. On the `Post Installation` section, check the `Redirect on update` option.
1. On the `Webhook` section, uncheck the `Active` option.
1. On the `Repository permissions` section, set the `Contents` permission to `Read-only`.
1. On the `Organization permissions` section, set the `Members` permission to `Read-only`.
1. On the `User permissions` section, set the `Email addresses` permission to `Read-only`.
1. On the `Where can this GitHub App be installed?` section, select the `Any account` option. This will allow your users to install the application in their own GitHub account and deploy personal repositories in your Okteto instance.
1. Press the `Create GitHub App` button.
1. On the next screen, copy the values of `App Id` and `Client Id`, you'll need to pass those to your Okteto instance in a future step.

> See [Creating a GitHub App](https://docs.github.com/en/developers/apps/building-github-apps/creating-a-github-app) for more information on creating a GitHub App from GitHub’s Developer guide.

### Generating a private key for the GitHub App

After you have created the GitHub App, you will need to generate a private key for authenticating to the GitHub App.

To generate a private key authenticating to the GitHub App:

1. In the upper-right corner of any page in GitHub, select your `profile icon > Organizations`.
1. Click on the `settings` of the organization you want to use to create the application.
1. In the left navigation, select `Developer settings > GitHub Apps`.
1. Select the GitHub App.
1. On the `Client secrets` section, press the `Generate a new client secret` button. Copy the value and save it in a safe place, since it won't be displayed again. You'll need to pass those to your Okteto instance in a future step. 
1. On the `Private keys` section (it's at the bottom of the page), press the `Generate a private key` button. A file with the private key will be saved in your computer.


### Adding the GitHub App Configuration to Okteto

Add the values we generated in the previous steps to your existing [Helm configuration file](/docs/self-hosted/install/deployment/#configuration-file).

```yaml
github:
  enabled: true
  appId: ${YOUR_APP_ID}
  clientId: ${YOUR_CLIENT_ID}
  clientSecret: ${YOUR_CLIENT_SECRET}
  installationUrl: https://github.com/apps/${YOUR_GITHUB_APP_NAME}/installations/new
  appPrivateKey: |
    -----BEGIN RSA PRIVATE KEY-----
    ......
    .....
    -----END RSA PRIVATE KEY-----
```

`clientID` and `clientSecret` refers to the values of the GitHub App you just created.

`appPrivateKey` is the private key you generated.

> You can also use the appId and clientId values of your GitHub application in the `auth.github` section of your Helm configuration file if you're using GitHub as your [authentication provider](/docs/self-hosted/install/deployment/#authentication).

Once you have updated your Helm configuration file, run the following command to reconfigure your Okteto instance:

```
helm upgrade okteto okteto/okteto -f config.yaml --namespace=okteto
```

If you're doing this as part of a fresh install, then run the following command:

```
helm install okteto okteto/okteto -f config.yaml --namespace=okteto
```

### Verifying your installation

If the installation was successful, you should now see a `GitHub` option in the `Deploy from Git` dialog. 

<p align="center"><Image src="/docs/self-hosted/administration/images/verify-installation.png" alt="verify your installation" width="650" /></p>

When you click on it, you should see the list of repositories that you added in the previous step. [This document](/docs/cloud/private-repositories/) has further information on how to deploy a private repository.
